Cleaning up TestChoral